--- a/requirements.txt
+++ b/requirements.txt
@@ -1,1 +1,13 @@
-gunicorn==0.14.2
+asgiref==3.3.1
+certifi==2020.6.20
+chardet==3.0.4
+Django==3.1.4
+gunicorn==20.0.4
+idna==2.10
+JCC==3.8
+numpy==1.19.4
+pytz==2020.4
+requests==2.24.0
+selenium==3.141.0
+sqlparse==0.4.1
+urllib3==1.25.11
