--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,8 @@
+dj-database-url==0.5.0
 Django==3.1.4
 gunicorn==20.0.4
 numpy==1.19.4
+psycopg2-binary==2.8.6
+python-dotenv==0.15.0
+pytz==2020.4
+whitenoise==5.2.0
